# zilant-encrypt-

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.hypothesis/constants/: 1a2fb658064fe0cc  1cdcb5fce87f5a00  30076b0ebe7ec9b2  35cce812d8d9f2ab  37cd62c70e8dc77c  43f4c7febae81bbf  5092ee253c8bbcc6  627d780b5faf8255  6cbcd63482c2fed1  8ec9ea477cea1860  9a9ae85f743e8d29  9cadab6444737980  9e473ae64c00857d  da39a3ee5e6b4b0d  e5c659725d9272d4
docs/: API_SPEC.md  INSTALL_PQ_DESKTOP.md  TECHNICAL_SPEC_V3.md  THREAT_MODEL.md  USAGE.md  USAGE_V3.md
hypothesis/: __init__.py  strategies.py
src/zilant_encrypt/: __init__.py  cli.py  errors.py  gui_app.py  gui_i18n.py  password_strength.py
src/zilant_encrypt/container/: __init__.py  api.py  core.py  format.py  keymgmt.py  overview.py  payload.py
src/zilant_encrypt/crypto/: aead.py  kdf.py  keyfile.py  pq.py  secure_memory.py
tests/: conftest.py  test_api_public_surface.py  test_cli.py  test_container_errors.py  test_crypto_hardening.py  test_decrypt_helper.py  test_fuzz_headers.py  test_gui_output_conflicts.py  test_gui_smoke.py  test_header_basic.py  test_header_v3.py  test_kdf_params.py  test_keyfile.py  test_multi_volume.py  test_password_strength.py  test_pq_hybrid.py  test_robustness.py  test_roundtrip.py  test_secure_memory.py  test_security_limits.py  test_usage_docs.py  test_version.py  test_volume_descriptor_helper.py  test_wrap_nonce.py  test_wrong_password.py
