[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "zilant-encrypt"
version = "0.1.0"
description = "Zilant Encrypt - secure container encryption utility"
authors = [{name = "Zilant Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42",
    "argon2-cffi>=23",
    "click>=8",
    "rich>=13",
]

[project.scripts]
zilenc = "zilant_encrypt.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "black>=24",
    "ruff>=0.4",
    "isort>=5",
    "mypy>=1.10",
    "pre-commit>=3",
]

[tool.black]
line-length = 100

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "B", "UP", "ANN", "Q", "A", "COM", "PL"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["zilant_encrypt"]
