[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "zilant-encrypt"
version = "0.2.0"
description = "Zilant Encrypt - secure container encryption with post-quantum hybrid mode and plausible deniability"
authors = [{ name = "Zilant Team" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["encryption", "aes-gcm", "argon2", "post-quantum", "kyber", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=42",
    "argon2-cffi>=23",
    "click>=8",
    "rich>=13",
]

[project.scripts]
zilenc = "zilant_encrypt.cli:main"
zilenc-gui = "zilant_encrypt.gui_app:main"

[project.optional-dependencies]
pq = ["oqs"]
gui = ["PySide6>=6.7"]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "hypothesis>=6",
    "black>=24",
    "ruff>=0.4",
    "isort>=5",
    "mypy>=1.10",
    "pre-commit>=3",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
    "E501",   # long lines
    "ANN",    # type annotations
    "PLR",    # magic numbers, too many args, etc.
    "A002",   # shadowing builtins
    "COM812", # trailing commas
]

[tool.isort]
profile = "black"
line_length = 100
case_sensitive = false

[tool.pytest.ini_options]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["zilant_encrypt"]
